--- a/index.html
+++ b/index.html
@@ -5,8 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    const baseURL =
-    'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/'
-  </body>
+  <body></body>
 </html>
