--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
+    <h1>Look at my Pokemon!</h1>
+    <section id="container"></section>
     <script src="app.js"></script>
   </body>
 </html>
